<resources>
    <string name="app_name">CrateMaze</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="back">back</string>
    <string name="timer">0</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b10">10</string>
    <string name="highscore">Highscore</string>
    <string name="fLevelText">Level:</string>
    <string name="Level1">Level1</string>
    <string name="Level2">Level2</string>
    <string name="Level3">Level3</string>
    <string name="Level4">Level4</string>
    <string name="Level5">Level5</string>
    <string name="Level6">Level6</string>
    <string name="Level7">Level7</string>
    <string name="Level8">Level8</string>
    <string name="Level9">Level9</string>
    <string name="Level10">Level10</string>
</resources>
