<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_material_light">

    <Button
        android:text="@string/b3"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:id="@+id/bLevel3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@color/crate_maze_orange"/>

    <Button
        android:text="@string/b2"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:id="@+id/bLevel2"
        android:layout_marginEnd="38dp"
        android:layout_alignBaseline="@+id/bLevel3"
        android:layout_alignBottom="@+id/bLevel3"
        android:layout_toStartOf="@+id/bLevel3"
        android:background="@color/crate_maze_orange" />

    <Button
        android:text="@string/b1"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:id="@+id/bLevel1"
        android:layout_alignBaseline="@+id/bLevel2"
        android:layout_alignBottom="@+id/bLevel2"
        android:layout_toStartOf="@+id/bLevel2"
        android:layout_marginEnd="33dp"
        android:background="@color/crate_maze_orange" />

    <Button
        android:text="@string/b5"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:id="@+id/bLevel5"
        android:layout_marginStart="36dp"
        android:layout_alignBaseline="@+id/bLevel4"
        android:layout_alignBottom="@+id/bLevel4"
        android:layout_toEndOf="@+id/bLevel4"
        android:background="@color/crate_maze_orange" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:id="@+id/bBack"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/background_floating_material_light" />

    <Button
        android:text="@string/b4"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:id="@+id/bLevel4"
        android:layout_marginStart="18dp"
        android:layout_alignBaseline="@+id/bLevel3"
        android:layout_alignBottom="@+id/bLevel3"
        android:layout_toEndOf="@+id/bBack"
        android:background="@color/crate_maze_orange"/>
</RelativeLayout>